--- a/search.html
+++ b/search.html
@@ -23,15 +23,15 @@
                     </div>
                     <div class="mb-3">
                         <label for="select" class="form-label">select menu</label>
-                        <select id="select" class="form-select">
-                            <option>maps</option>
-                            <option>audio</option>
-                            <option>photos</option>
-                            <option>manuscripts</option>
-                            <option>newspapers</option>
-                            <option>film-and-videos</option>
-                            <option>notated-music</option>
-                            <option>websites</option>
+                        <select id="format" class="form-select">
+                            <option value="map">maps</option>
+                            <option value="audio">audio</option>
+                            <option value="photos">photos</option>
+                            <option value="manuscripts">manuscripts</option>
+                            <option value="newspapers">newspapers</option>
+                            <option value="film-and-videos">film-and-videos</option>
+                            <option value="notated-music">notated-music</option>
+                            <option value="websites">websites</option>
                         </select>
                     </div>
                     <div class="mb-3">
