--- a/search.html
+++ b/search.html
@@ -36,9 +36,9 @@
                     </div>
                     <div class="mb-3">
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="fieldsetCheck" enabled>
+                            <input class="form-check-input" type="checkbox" id="fieldsetCheck" disabled>
                             <label class="form-check-label" for="fieldsetCheck">
-                                can check this
+                                can't check this
                             </label>
                         </div>
                     </div>
