--- a/search.html
+++ b/search.html
@@ -44,10 +44,10 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </fieldset>
-            </form>
+                <!-- </form -->
         </div>
-        <div class="col-12 col-md-8">
-            <div class="card">
+        <div class="col-12 col-md-8 card-container">
+            <!-- <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -116,7 +116,7 @@
                     <a href="#" class="card-link">Card link</a>
                     <a href="#" class="card-link">Another link</a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </body>
